@@ -31,6 +31,7 @@ import org.elasticsearch.cluster.service.ClusterService;
 import org.elasticsearch.common.component.AbstractLifecycleComponent;
 import org.elasticsearch.common.inject.Inject;
 import org.elasticsearch.common.inject.Provider;
+import org.elasticsearch.common.settings.ClusterSettings;
 import org.elasticsearch.common.settings.Setting;
 import org.elasticsearch.common.settings.Settings;
 import org.elasticsearch.common.unit.TimeValue;
@@ -59,17 +60,20 @@ public class UDCService extends AbstractLifecycleComponent {
     private final ClusterService clusterService;
     private final Provider<ClusterIdService> clusterIdServiceProvider;
     private final ExtendedNodeInfo extendedNodeInfo;
+    private final ClusterSettings clusterSettings;
 
     @Inject
     public UDCService(Settings settings,
                       ExtendedNodeInfo extendedNodeInfo,
                       ClusterService clusterService,
-                      Provider<ClusterIdService> clusterIdServiceProvider) {
+                      Provider<ClusterIdService> clusterIdServiceProvider,
+                      ClusterSettings clusterSettings) {
         super(settings);
         this.extendedNodeInfo = extendedNodeInfo;
         this.clusterService = clusterService;
         this.clusterIdServiceProvider = clusterIdServiceProvider;
         this.timer = new Timer("crate-udc");
+        this.clusterSettings = clusterSettings;
     }
 
     @Override
@@ -81,7 +85,8 @@ public class UDCService extends AbstractLifecycleComponent {
         if (logger.isDebugEnabled()) {
             logger.debug("Starting with delay {} and period {}.", initialDelay.getSeconds(), interval.getSeconds());
         }
-        PingTask pingTask = new PingTask(clusterService, clusterIdServiceProvider.get(), extendedNodeInfo, url, settings);
+        PingTask pingTask = new PingTask(clusterService, clusterIdServiceProvider.get(), extendedNodeInfo, url,
+            clusterSettings, settings);
         timer.scheduleAtFixedRate(pingTask, initialDelay.millis(), interval.millis());
     }
 
