@@ -21,6 +21,8 @@ Breaking Changes
 Changes
 =======
 
+ - UDC pings will send ``licence.ident`` if defined from now on.
+
  - Added support for host based authentication (HBA) via the Postgres Wire
    Protocol.
    Please see :ref:`Host Based Authentication <administration_hba>`.
